<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="65dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myweight"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnCalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/menu_button_background"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnRecordWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_weight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/menu_button_background"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnTrackWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_weight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/menu_button_background" />

</LinearLayout>
