<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Record Weight"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_weight_kg"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:background="@drawable/edittext_rounded_corner"
        android:padding="10dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_date"
        android:inputType="date"
        android:textColor="#000000"
        android:background="@drawable/edittext_rounded_corner"
        android:padding="10dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:textColor="#000000"
        android:background="@drawable/edittext_rounded_corner"
        android:padding="10dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:background="@drawable/button_rounded_corner"
        android:padding="12dp" />

</LinearLayout>

